# min-sharp

./: Grammar-draft.md  Notes.md  README.md  Todo.md  language-definition.md  language-definition.txt  runtime.md
Protorypes/: runtime_complex_object.c  runtime_complex_object.h  system_types_repository.c  type_internals.h  (+2 more)
src/runtime/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  min-sharp-runtime.sln
src/runtime/min-sharp-runtime/: CMakeLists.txt  internal_runtime.c  internal_runtime.h  min-sharp-runtime-function-prototypes.h  min-sharp-runtime.c  min-sharp-runtime.cpp  min-sharp-runtime.h  min-sharp-runtime.vcxproj  min-sharp-runtime.vcxproj.filters  min_sharp-runtime-support.c  min_sharp-runtime-support.h  type_internals.h
src/runtime/min-sharp-runtime/Types/: runtime_boolean.c  runtime_boolean.h  runtime_function.c  runtime_function.h  runtime_interfaces.h  runtime_number.c  runtime_number.h
src/runtime/min-sharp-runtime/Types/decNumber/: decNumber.h
src/runtime/min-sharp-runtime/services/: managed_memory_services.c  managed_memory_services.h  runtime_services.c  runtime_services.h  system_list.c  system_list.h  system_services.c  system_services.h  system_types_repository.c  system_types_repository.h  system_unmanaged_data_manager.c
src/runtime/min-sharp-runtime/services/internal/: managed_memory_services.c  managed_memory_services.h  system_services.c  system_services.h  system_unmanaged_data_manager.h
src/runtime/tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  main.c  main.h  managed_memory_tests.c  min-sharp-runtime-tests.sln  min-sharp-runtime-tests.vcxproj  min-sharp-runtime-tests.vcxproj.filters  runtime_number_tests.c  runtime_services_tests.c  system_list_tests.c  system_types_respository_tests.c  sytem_services_tests.c  test.c  test.h
(+56 files in other folders)
